--- a/Assignment 1/Readme
+++ b/Assignment 1/Readme
@@ -1,12 +1,8 @@
-write python codes and build logistic regres-
-sion classifiers on breast cancer dataset to predict whether the cancer is malignant or benign
-on the patients.
+Write python codes and build logistic regression classifiers on breast cancer dataset to predict whether the cancer is malignant or benign on the patients.
 What I have done:
 •Load data, clean data and partition them into training and testing data.
 •Build logistic regression and L2-regularized logistic regression models.
-•Implement three gradient descent algorithms for each model: Batch Gradient Descent (GD),
-Mini-Batch Gradient Descent (MB-SGD) and Stochastic Gradient Descent (SGD).
+•Implement three gradient descent algorithms for each model: Batch Gradient Descent (GD), Mini-Batch Gradient Descent (MB-SGD) and Stochastic Gradient Descent (SGD).
 •Compare the loss curve of three gradient descent algorithms (GD/MB-SGD/SGD).
 •Compare logistic regression and regularized version in terms of training and testing error.
-•Try to tune different parameters (regularization parameter, learning rate, etc.) to see their
-effects.
+•Try to tune different parameters (regularization parameter, learning rate, etc.) to see their effects.
